<resources>
    <string name="app_name">BedCare</string>

    <!--Informacion Paciente-->


    <string name="estado">Estado de la conexión:</string>

    <string name="pacientes">Pacientes</string>
    <string name="listpacientes">Menu Pacientes</string>
    <string name="config">Configuración</string>
    <string name="mainmenu">Menu BedCare</string>
    <string name="menuPatient">Menu Pacientes</string>
    <string name="showPatient">Datos del paciente</string>

    <string name="addPatient">Agregar Paciente</string>
    <string name="cancel">Cancelar</string>
    <string name="notifications">Notificaciones</string>
    <string name="information">Informacion Paciente</string>

    <string name="lista_vacia">Sin Datos</string>
    <!--Menu Paciente-->
    <string name="search">Buscar Paciente</string>
    <string name="add">Añadir Paciente</string>
    <string name="addpaciente">Ingrese datos del Paciente</string>
    <string name="edit">Editar Paciente</string>
    <string name="delete">Eliminar Paciente</string>

    <string name="id">ID:</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="cedula">Rut:</string>
    <string name="edad">Edad:</string>
    <string name="fechaingreso">Fecha ingreso:</string>
    <string name="medico">Medico Encargado:</string>
    <string name="observacion">Observación:</string>
    <string name="causapostracion">Causa Postración:</string>

    <string name="statePatient">Estado Paciente</string>

    <string name="eliminar_titulo">Eliminar Paciente</string>
    <string name="eliminar_mensaje">¿Seguro que desea eliminar estos datos?</string>
    <string name="eliminar_confirmacion">Datos del paciente eliminados</string>

    <string name="crear_titulo">Nuevo Paciente</string>
    <string name="crear_confirmacion">Paciente agregado</string>

    <string name="editar_titulo">Editar Paciente</string>
    <string name="editar_confirmacion">Paciente modificado</string>

    <string name="saveChanges">Guardar cambios</string>


</resources>
