<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Menu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="391dp"
        android:layout_height="370dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPacientes"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@color/colorAccent"
            android:text="@string/pacientes"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="73dp" />

        <Button
            android:id="@+id/btnNotifications"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/colorAccent"
            android:text="@string/notifications"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <Button
            android:id="@+id/btnConfig"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/colorAccent"
            android:text="@string/config"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>